2024-04-29T16:14:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8881879563 # 227
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 640 1102 / 645 1110
* notice: next accum: outdated-unq outdated-all / unq all: 641 1103 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-15] / []

2024-04-29T00:54:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8871733381 # 225
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 645 1110
* notice: next accum: outdated-unq outdated-all / unq all: 640 1102 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-14] / []

2024-04-24T16:13:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8819798352 # 212
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-24
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 639 1101 / 644 1108
* notice: next accum: outdated-unq outdated-all / unq all: 639 1101 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-24]

2024-04-18T08:15:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8734607757 # 193