@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-29T16:14:29Z",
-  "count_outdated" : 1103,
-  "uniques_outdated" : 641,
+  "timestamp" : "2024-04-30T16:15:16Z",
+  "count_outdated" : 1105,
+  "uniques_outdated" : 642,
   "count" : 1110,
   "uniques" : 645,
   "clones" : [
-    {
-      "timestamp": "2024-04-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-17T00:00:00Z",
       "count": 2,
