@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-04-16T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-17T00:00:00Z",
       "count": 2,
